@@ -48,6 +48,7 @@ from .functions import Lorentz1d_der_x
 from .functions import Lorentz1d_der_p
 from .functions import Lorentz2d
 from .functions import PseudoVoigt1d
+from .functions import PseudoVoigt1dasym
 from .functions import PseudoVoigt2d
 from .functions import Gauss1dArea
 from .functions import Gauss2dArea
