@@ -1,3 +1,4 @@
+* new PseudoVoigt1dasym function implementing an asymmetric PseudoVoigt peak
 * FuzzyGridder1D: improved 1D gridder using a range of value for each data
   point
 * fix memory leak in XRDMLFile by abandoning minidom
